# autorotate

./: .gitignore  README.md  houghlines.cpp
All_images/sample_images/: sample-003.tiff  sample-005.tiff
All_images/sample_images_135/: sample-002.tiff  sample-005.tiff
All_images/sample_images_180/: sample-006.tiff
All_images/sample_images_225/: sample-003.tiff
All_images/sample_images_270/: sample-002.tiff
All_images/sample_images_315/: sample-001.tiff  sample-002.tiff  sample-005.tiff  sample-006.tiff
All_images/sample_images_45/: sample-001.tiff  sample-003.tiff
All_images/sample_images_90/: sample-001.tiff  sample-005.tiff
all_images/: scan0002.tif  scan0003.tif
all_images/sample_images/: sample-001.tiff  sample-002.tiff  sample-004.tiff  sample-006.tiff
all_images/sample_images_135/: sample-001.tiff  sample-003.tiff  sample-004.tiff  sample-006.tiff
all_images/sample_images_180/: sample-001.tiff  sample-002.tiff  sample-003.tiff  sample-004.tiff  sample-005.tiff
all_images/sample_images_225/: sample-001.tiff  sample-002.tiff  sample-004.tiff  sample-005.tiff  sample-006.tiff
all_images/sample_images_270/: sample-001.tiff  sample-003.tiff  sample-004.tiff  sample-005.tiff  sample-006.tiff
code/: angledetect.py  autorotate.sh  bah.py  build_all.sh  deskew  deskew.cpp  detectflip  detectflip.c  houghlines.cpp  picker.py  rawautorotate.sh  results.csv  rotateimg  rotateimg.cpp
code/combined/: CMakeLists.txt  Test  autorotate  build.sh  build_all.sh  deskewnew.cpp  detectflip.cpp  detectflip.h
code/combined/tempstore/: temp.tif
(+19 files in other folders)
