cmake_minimum_required(VERSION 2.8)
project( Test )
find_package( OpenCV REQUIRED )
SET(test_SOURCES deskewnew.cpp detectflip.c)
SET(test_HEADERS detectflip.h)
SET(leptonica_DIR /usr/local/include/leptonica)
SET(leptonica_LIBS lept png jpeg tiff m)
add_executable( Test ${test_SOURCES} ${test_HEADERS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${leptonica_DIR})
target_link_libraries( Test ${OpenCV_LIBS} ${leptonica_LIBS})
